# etl_data_processing

./: .env  .env.example  .gitignore  README.md  alembic.ini  config.py  docker-compose.yml  download_all_from_s3.py  etl_main.py  extract_db.ipynb  main.py  pyproject.toml  test.ipynb  test.json  test.py  test_wp_data_extraction.py  text.md  weaviate_jina_test.ipynb  weaviate_test.ipynb  xlsx_table_formation.ipynb
config/: combine.json  organization_schema.json  person_schema.json
src/: agentic_extractor.py  csv_formatter.py  docling_controller.py  docling_extractor.py  file_loader.py  logger.py  pipeline.py  query_retriever.py  txt_extraction.py  weaviate_utils.py
src/db_conversion/: models_organization.py  models_person.py  pg_controller.py  pg_db_utils.py  struct_to_sql.py
src/website_data_transformation/: wordpress_content_cleaner.py  wordpress_data_processor.py
test/: csv_to_xlsx.py  dir_layer_save.py  doc_to_docx.py  pandoc.py  test.ipynb
