[project]
name = "etl-data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "agentic-doc>=0.3.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dask>=2025.7.0",
    "docling>=2.40.0",
    "ipykernel>=6.29.5",
    "psycopg2>=2.9.10",
    "pyarrow>=21.0.0",
    "pymysql>=1.1.1",
    "pypandoc-binary>=1.15",
    "weaviate-client>=4.16.4",
]

[tool.uv.sources]
docling = { git = "https://github.com/sazzadJBC/docling.git" }
